--- a/API/Views/Home/Index.cshtml
+++ b/API/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@page
+@model API.Views.Home.IndexModel
+@{
+    Layout = "Shared/_Layout.cshtml";
+    ViewData["Title"] = "Welcome";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h2>Вы уже зарегестрированны? <a asp-area="" asp-page="LoginPage">Войти</a></h2>
+<h2>Вы не зарегестрированны? <a asp-area="" asp-page="RegistrationPage">Регистрация</a></h2>
