--- a/API/Views/Pages/RoleUpdatePage.cshtml
+++ b/API/Views/Pages/RoleUpdatePage.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "{id}"
-@model API.Views.RoleUpdatePageModel
+@using API.Views.Pages;
+@model RoleUpdatePageModel
 @{
     Layout = "Shared/_Layout.cshtml";
     ViewData["Title"] = "RoleUpdate";
