--- a/API/Views/Pages/UserUpdatePage.cshtml
+++ b/API/Views/Pages/UserUpdatePage.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "{id}"
-@model API.Views.UserUpdatePageModel
+@using API.Views.Pages;
+@model UserUpdatePageModel
 @{
     Layout = "Shared/_Layout.cshtml";
     ViewData["Title"] = "UserUpdate";
