--- a/BlogAppAPI/Pages/Index.cshtml
+++ b/BlogAppAPI/Pages/Index.cshtml
@@ -1,9 +1,4 @@
-﻿@using BlogAppIdentity.Models;
-@using Microsoft.AspNetCore.Identity
-
-@inject SignInManager<User> SignInManager
-@inject UserManager<User> UserManager
-
+﻿@page
 @model API.Views.Home.IndexModel
 @{
     Layout = "Shared/_Layout.cshtml";
